Correcting spacing of feed item in main nav

--- a/hugo/assets/sass/components/nav/_feeds.scss
+++ b/hugo/assets/sass/components/nav/_feeds.scss
@@ -2,7 +2,7 @@
   .nav_body {
     .nav_parent--feeds {
       > .nav_item {
-        padding: 2rem 1rem 2rem 1.5rem;
+        padding: 2rem 1rem 2rem 2.5rem;
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23fff' d='M19.199 24C19.199 13.467 10.533 4.8 0 4.8V0c13.165 0 24 10.835 24 24h-4.801zM3.291 17.415a3.3 3.3 0 0 1 3.293 3.295A3.303 3.303 0 0 1 3.283 24C1.47 24 0 22.526 0 20.71s1.475-3.294 3.291-3.295zM15.909 24h-4.665c0-6.169-5.075-11.245-11.244-11.245V8.09c8.727 0 15.909 7.184 15.909 15.91z'/%3E%3C/svg%3E%0A");
         background-repeat: no-repeat no-repeat;
         background-position: center center;
